--- a/exercicios/htmlpuro/forms/login.html
+++ b/exercicios/htmlpuro/forms/login.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="https://www.w3schools.com/action_page.php" method="post">
+        <div>
+            <label for="usuario">Usuário:</label> 
+            <input type="text" id="usuario" name="usuario> <br>
+        </div>
+        <div>
+            <label for="senha">Senha:</label>
+            <input type="password" id="senha" name="senha">
+        </div>
+        <div>
+            <input type="submit" value="Login">
+        </div>
+    </form>
     
 </body>
 </html>
