--- a/exercicios/htmlpuro/forms/contato.html
+++ b/exercicios/htmlpuro/forms/contato.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+
+    <form action="contato.jsp">
+        <fieldset>
+            <legend>Contato</legend>
+            Nome: <input type="text" name="nome"><br>
+            Email: <input type="text" name="email"><br>
+            Assunto: <input type="text" name="assunto"><br>
+            <textarea name="text" id="txt" cols="100" rows="10"></textarea>
+            <input type="submit" name="enviar">
+
+        </fieldset>
+
+    </form>
     
 </body>
 </html>
