--- a/exercicios/htmlpuro/forms/solicitacaofilme.html
+++ b/exercicios/htmlpuro/forms/solicitacaofilme.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    Nome do filme:<input type="text" name="nomefilme" id="nomefilme"> <br>
+    Ano de lançamento:<input type="text" name ="ano" id="ano"> <br>
+    <input type="submit">
+
     
 </body>
 </html>
