--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <ol>
         <li> <a href="bio/biografia.html">Biografia</a></li>
-        <li><a href="exercicios/htmlpuro/tabela.html">Tabelas html</a></li>
+        <li><a href="exercicios/htmlpuro/">Primeiros exercícios (html apenas)</a></li>
     </ol>
 
 
