--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Projeto web e mobile</title>
 
-    <ol>
+    <ol type="1">
         <li> <a href="bio/biografia.html">Biografia</a></li>
-        <li><a href="exercicios/htmlpuro/">Primeiros exercícios (html apenas)</a></li>
+        <li><a href="exercicios/htmlpuro/tabela.html">Tabela</a></li>
+        <li><a href="exercicios/htmlpuro/lista.html">lista</a></li>
+        <li><a href="exercicios/htmlpuro/animais.html">Animais em extinção</a></li>
+        <li><a href="exercicios/htmlpuro/manual-do-investidor.html">Manual do investidor</a></li>
+        <li><a href="exercicios/htmlpuro/forms/login.html">Form login</a></li>
+        <li><a href="exercicios/htmlpuro/forms/login.html">Form contato</a></li>
+        <li><a href="exercicios/htmlpuro/forms/login.html">Form solicitação de filme</a></li>
     </ol>
 
 
