--- a/exercicios/htmlpuro/forms/contato.html
+++ b/exercicios/htmlpuro/forms/contato.html
@@ -13,7 +13,7 @@
             Nome: <input type="text" name="nome"><br>
             Email: <input type="text" name="email"><br>
             Assunto: <input type="text" name="assunto"><br>
-            <textarea name="text" id="txt" cols="100" rows="10"></textarea>
+            <textarea name="text" id="txt" cols="100" rows="10" placeholder="Escreva sua mensagem"></textarea> <br>
             <input type="submit" name="enviar">
 
         </fieldset>
