--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
 
     <ol type="1">
         <li> <a href="bio/biografia.html">Biografia</a></li>
-        <li><a href="exercicios/htmlpuro/tabela.html">Tabela</a></li>
-        <li><a href="exercicios/htmlpuro/lista.html">lista</a></li>
-        <li><a href="exercicios/htmlpuro/animais.html">Animais em extinção</a></li>
-        <li><a href="exercicios/htmlpuro/manual-do-investidor.html">Manual do investidor</a></li>
-        <li><a href="exercicios/htmlpuro/forms/login.html">Form login</a></li>
-        <li><a href="exercicios/htmlpuro/forms/contato.html">Form contato</a></li>
-        <li><a href="exercicios/htmlpuro/forms/solicitacaofilme.html">Form solicitação de filme</a></li>
+        <li><a href="exercicios/index.html">Exercícios</a></li>
     </ol>
 
 
