--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <ol type="1">
         <li> <a href="bio/biografia.html">Biografia</a></li>
-        <li><a href="exercicios/index.html">Exercícios</a></li>
+        <li><a href="exercicios-html/index.html">Exercícios</a></li>
     </ol>
 
 
