--- a/exercicios-html/htmlpuro/forms/cadastro.html
+++ b/exercicios-html/htmlpuro/forms/cadastro.html
@@ -14,15 +14,21 @@
             <input type="text" id="name" name="name" placeholder="Digite aqui seu nome" required>
         </div>
 
+        <br>
+
         <div>
             <label for="email">Digite seu email</label><br>
             <input type="email" id="email" placeholder="email">
         </div>
 
+        <br>
+
         <div>
             <label for="pass">Senha</label><br>
             <input type="password" id="pass" name="password"placeholder="senha" minlength="8" maxlength="32">
         </div>
+
+        <br>
 
         <div>
             <label>Sexo:</label><br>
@@ -31,6 +37,8 @@
             <label">Femino</label>
             <input type="radio" name="Sexo" value="Feminino">
         </div>
+
+        <br>
 
         <div>
             <label for="Estado">Estado</label>
@@ -42,15 +50,16 @@
             </select>
         </div>
 
+        <br>
+
         <div>
             <label for="date">Data de nascimento</label><br>
             <input type="date" id="date">
         </div>
-
-
-
-
-        
+        <br>
+        <div>
+            <input type= "submit" placeholder="Enviar">
+        </div>
 
     </form>
 
