--- a/exercicios-html/index.html
+++ b/exercicios-html/index.html
@@ -14,6 +14,7 @@
         <li> <a href="htmlpuro/forms/contato.html"> Formulário contato </a> </li>
         <li> <a href="htmlpuro/forms/login.html"> Formulário login </a> </li>
         <li> <a href="htmlpuro/forms/solicitacaofilme.html"> Formulário solicitação de filme </a> </li>
+        <li> <a href="htmlpuro/forms/cadastro.html"> Formulário Cadastro </a> </li>
 
     </ol>
     
