--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Projeto web e mobile</title>
 
     <ol type="1">
-        <li> <a href="bio/biografia.html">Biografia</a></li>
+        <li> <a href="bio/biografia-1.0.html">Biografia</a></li>
         <li><a href="exercicios-html/index.html">Exercícios</a></li>
     </ol>
 
