--- a/biografia-2.0.html
+++ b/biografia-2.0.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="assets/styles/bio-2.0.css">
 </head>
 <body>
+    <nav class="navegacao center-text">
+        <a href="#">Sobre mim</a>
+        <a href="#">Hobbies</a>
+        <a href="#">Sonhos</a>
+    </nav>
+
+    <section">
+        <article class="container-infancia font-color center-text">
+            <p>
+                Meu nome é Rodrigo Teixeira Manzella, nasci no dia 11 de março de 2003 na cidade Recife-PE.
+            </p>
+        </article>
+    </section>
     
 </body>
 </html>
