--- a/biografia-2.0.html
+++ b/biografia-2.0.html
@@ -12,12 +12,22 @@
         <a href="#">Sobre mim</a>
         <a href="#">Hobbies</a>
         <a href="#">Sonhos</a>
+        <a href="#">Sociais</a>
     </nav>
 
-    <section">
-        <article class="container-infancia font-color center-text">
+    <section class="container-pai-historia">
+        <article class="container font-color">
+            <h3>Infância</h3>
             <p>
-                Meu nome é Rodrigo Teixeira Manzella, nasci no dia 11 de março de 2003 na cidade Recife-PE.
+                Meu nome é Rodrigo Teixeira Manzella, nasci no dia 11 de março de 2003 em Recife-PE, no Real Hospital Português.
+                Morei até os meus 10 anos em um condomínio chamado Nestor Cavalcanti, perto do Shopping Recife. Acredito que até
+                agora essa tenha sido a melhor fase da minha vida, pois minha única preocupação no dia a dia era se eu brincaria de
+                esconde-esconde ou polícia e ladrão. Nesse condomíno tinha muitas crianças da minha idade e fiz amizades que levo
+                comigo até hoje.
+            </p>
+
+            <p>
+                Estudei até meus 7 anos de idade em uma escola chamada Bem-me-quer, após isso
             </p>
         </article>
     </section>
