--- a/biografia-2.0.html
+++ b/biografia-2.0.html
@@ -30,6 +30,36 @@
                 Estudei até meus 7 anos de idade em uma escola chamada Bem-me-quer, após isso
             </p>
         </article>
+
+        <article class="container font-color">
+            <h3>Adolescência</h3>
+            <p>
+                Meu nome é Rodrigo Teixeira Manzella, nasci no dia 11 de março de 2003 em Recife-PE, no Real Hospital Português.
+                Morei até os meus 10 anos em um condomínio chamado Nestor Cavalcanti, perto do Shopping Recife. Acredito que até
+                agora essa tenha sido a melhor fase da minha vida, pois minha única preocupação no dia a dia era se eu brincaria de
+                esconde-esconde ou polícia e ladrão. Nesse condomíno tinha muitas crianças da minha idade e fiz amizades que levo
+                comigo até hoje.
+            </p>
+
+            <p>
+                Estudei até meus 7 anos de idade em uma escola chamada Bem-me-quer, após isso
+            </p>
+        </article>
+
+        <article class="container font-color">
+            <h3>Vida Adulta</h3>
+            <p>
+                Meu nome é Rodrigo Teixeira Manzella, nasci no dia 11 de março de 2003 em Recife-PE, no Real Hospital Português.
+                Morei até os meus 10 anos em um condomínio chamado Nestor Cavalcanti, perto do Shopping Recife. Acredito que até
+                agora essa tenha sido a melhor fase da minha vida, pois minha única preocupação no dia a dia era se eu brincaria de
+                esconde-esconde ou polícia e ladrão. Nesse condomíno tinha muitas crianças da minha idade e fiz amizades que levo
+                comigo até hoje.
+            </p>
+
+            <p>
+                Estudei até meus 7 anos de idade em uma escola chamada Bem-me-quer, após isso
+            </p>
+        </article>
     </section>
     
 </body>
