--- a/biografia-2.0.html
+++ b/biografia-2.0.html
@@ -9,15 +9,14 @@
 </head>
 <body>
     <nav class="navegacao center-text">
-        <a href="#">Sobre mim</a>
-        <a href="#">Hobbies</a>
-        <a href="#">Sonhos</a>
-        <a href="#">Sociais</a>
+        <a href="https://www.linkedin.com/in/rodrigo-manzella-7b8b0a23b/" target="_blank">Linkedin</a>
+        <a href="https://www.instagram.com/rodrigo_manzella/?hl=en" target="_blank">Instagram</a>
+        <a href="https://github.com/RodManzella" target="_blank">Github</a>
     </nav>
 
     <section class="container-pai-historia">
-        <article class="container font-color">
-            <h3>Infância</h3>
+        <article class="container font-color ">
+            <h3>Um pouco sobre mim</h3>
             <p>
                 Meu nome é Rodrigo Teixeira Manzella, nasci no dia 11 de março de 2003 em Recife-PE, no Real Hospital Português.
                 Morei até os meus 10 anos em um condomínio chamado Nestor Cavalcanti, perto do Shopping Recife. Acredito que até
@@ -27,38 +26,26 @@
             </p>
 
             <p>
-                Estudei até meus 7 anos de idade em uma escola chamada Bem-me-quer, após isso
+                Estudei até meus 7 anos de idade em uma escola chamada Bem-me-quer. Depois, entrei no colégio Santa Maria, onde iniciei
+                meus estudos no terceiro ano do ensino fundamental. Lembro do primeiro dia de aula no Santa Maria como se fosse ontem.
+                Eu fui o único novato a entrar no turno da tarde naquele ano(2011), isso quer dizer que todos já se conheciam e eu era o único
+                estranho na sala. Lembro que quando eu entrei na sala eu vi as cadeiras dispostas em um círculo e algumas crianças já haviam chegado.
+                Eu era muito tímido e a professora fez todo mundo se apresentar, o que acalmou um pouco. Aos poucos fui me soltando com os colegas, e em pouco
+                tempo todos já me conheciam como o palhaço hiperativo da sala. Eu não parava quieto um instante, vivia escalando coisas dentro e fora da sala,
+                conversava sem parar, ia parar na coordenação todos e fazia piadas sempre que encontrava oportunidade. No geral, posso dizer que eu fui uma criança muito
+                alegre, e vejo essa fase com muita nostalgia quando olho para trás.
+
+            </p>
+
+            <p>
+                Atualmente sou universitário e tenho 20 anos(2023). Sou estudante de Ciência da computação na Universidade Católica de Pernambuco.
+                Estou gostando muito do curso, apesar de ainda não saber que área eu quero seguir, por isso estou usando parte do meu tempo
+                para estudar muitas áreas diferentes.Nesse momento estou estudando desenvolvimento web para dar continuidade ao sistema que meu falecido
+                pai criou, e por enquanto posso dizer que estou gostando dessa área. Outra área que me atrai muito é a Ciência de Dados, que é a área que minha
+                irmã Gabriela trabalha.
             </p>
         </article>
 
-        <article class="container font-color">
-            <h3>Adolescência</h3>
-            <p>
-                Meu nome é Rodrigo Teixeira Manzella, nasci no dia 11 de março de 2003 em Recife-PE, no Real Hospital Português.
-                Morei até os meus 10 anos em um condomínio chamado Nestor Cavalcanti, perto do Shopping Recife. Acredito que até
-                agora essa tenha sido a melhor fase da minha vida, pois minha única preocupação no dia a dia era se eu brincaria de
-                esconde-esconde ou polícia e ladrão. Nesse condomíno tinha muitas crianças da minha idade e fiz amizades que levo
-                comigo até hoje.
-            </p>
-
-            <p>
-                Estudei até meus 7 anos de idade em uma escola chamada Bem-me-quer, após isso
-            </p>
-        </article>
-
-        <article class="container font-color">
-            <h3>Vida Adulta</h3>
-            <p>
-                Meu nome é Rodrigo Teixeira Manzella, nasci no dia 11 de março de 2003 em Recife-PE, no Real Hospital Português.
-                Morei até os meus 10 anos em um condomínio chamado Nestor Cavalcanti, perto do Shopping Recife. Acredito que até
-                agora essa tenha sido a melhor fase da minha vida, pois minha única preocupação no dia a dia era se eu brincaria de
-                esconde-esconde ou polícia e ladrão. Nesse condomíno tinha muitas crianças da minha idade e fiz amizades que levo
-                comigo até hoje.
-            </p>
-
-            <p>
-                Estudei até meus 7 anos de idade em uma escola chamada Bem-me-quer, após isso
-            </p>
         </article>
     </section>
     
