--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <ol type="1">
         <li> <a href="biografia-1.0.html">Biografia - 1.0</a></li>
+        <li> <a href="biografia-2.0.html">Biografia - 2.0</a></li>
         <li><a href="exercicios-html/index.html">Exercícios</a></li>
     </ol>
 
