--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li> <a href="biografia-1.0.html">Biografia - 1.0</a></li>
         <li> <a href="biografia-2.0.html">Biografia - 2.0</a></li>
         <li><a href="exercicios-html/index.html">Exercícios HTML</a></li>
-        <li><a href="exercicios-html-css/index.html">Exercícios HTML</a></li>
+        <li><a href="exercicios-html-css/index.html">Exercícios HTML-CSS</a></li>
     </ol>
 
 
