--- a/biografia-2.0.html
+++ b/biografia-2.0.html
@@ -44,10 +44,14 @@
                 pai criou, e por enquanto posso dizer que estou gostando dessa área. Outra área que me atrai muito é a Ciência de Dados, que é a área que minha
                 irmã Gabriela trabalha.
             </p>
+
+            <p class="imagem">
+                <img src="assets/images/rodrigo.jpeg" alt="">
+            </p>
         </article>
 
         </article>
     </section>
     
-</body>
+</body> 
 </html>
