--- a/biografia-2.0.html
+++ b/biografia-2.0.html
@@ -14,7 +14,7 @@
         <a href="https://github.com/RodManzella" target="_blank">Github</a>
     </nav>
 
-    <section class="container-pai-historia">
+    <section>
         <article class="container font-color ">
             <h3>Um pouco sobre mim</h3>
             <p>
@@ -49,9 +49,21 @@
                 <img src="assets/images/rodrigo.jpeg" alt="">
             </p>
         </article>
-
-        </article>
     </section>
+
+    <div class="video-container">
+        <video 
+        width="540"
+        height="260"
+        src="assets/videos/little_kitten_playing_his_toy_mouse (720p).mp4"
+        controls
+        autoplay
+        muted
+        loop
+        
+        >
+        </video>
+    </div>
     
 </body> 
 </html>
