--- a/exercicios-html-css/pag247.html
+++ b/exercicios-html-css/pag247.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <p>
-        Sites legais para autodidatas da programação:
-        <a href="https://www.w3schools.com/" class="no-decoration">w3schools</a> |
-        <a href="https://www.geeksforgeeks.org/" class="no-decoration">geeksforgeeks</a>
+       <span> Sites legais para autodidatas da programação:</span>
+        <a href="https://www.w3schools.com/">w3schools</a> |
+        <a href="https://www.geeksforgeeks.org/">geeksforgeeks</a>
     </p>
     
 </body>
