--- a/biografia-2.0.html
+++ b/biografia-2.0.html
@@ -52,6 +52,7 @@
     </section>
 
     <div class="video-container">
+        <h3 class="center-text font-color">Gatinho fofo</h3>
         <video 
         width="540"
         height="260"
