--- a/Javascript-Dados/index.html
+++ b/Javascript-Dados/index.html
@@ -15,9 +15,10 @@
         <div class="div-imagens-button">
             <img src="imgs/dice1.png" alt="dadoface1">
             <img src="imgs/dice1.png" alt="dadoface1">
-            <button class="button-cassino">Tente sua sorte!</button>
+            <button class="button-cassino" id="button">Tente sua sorte!</button>
         </div>
-        </div>
+    </div>
+    <img src="imgs/gangasterbob.png" class="bob-gangster" alt="bobsponjagangster">
 
         
     </div>
