--- a/Javascript-Dados/index.html
+++ b/Javascript-Dados/index.html
@@ -9,14 +9,15 @@
 </head>
 <body class="container-background">
     <div class="container-titulo">
-        <h1 class="h1-cassino">Seja muito bem vindo ao Dig´s</h1>
+        <h1 class="h1-cassino">Seja muito bem vindo ao Dig´s Cassino!</h1>
         <img src="imgs/png smiley.png" alt="smileface">
     </div>
     <div>
         <div class="div-imagens-button">
-            <img src="imgs/dice1.png" alt="dadoface1">
-            <img src="imgs/dice1.png" alt="dadoface1">
+            <img src="imgs/dice1.png" id="dado1" alt="dadoface1">
+            <img src="imgs/dice1.png" id="dado2" alt="dadoface1">
             <button class="button-cassino" id="button">Tente sua sorte!</button>
+            <h3 id="soma"></h3>
         </div>
     </div>
     <img src="imgs/gangasterbob.png" class="bob-gangster" alt="bobsponjagangster">
